--- a/.github/workflows/go_mcl_signer.yml
+++ b/.github/workflows/go_mcl_signer.yml
@@ -79,3 +79,4 @@ jobs:
         upload_url: ${{ steps.get_release_info.outputs.upload_url }}
         asset_path: ./cmd/signer/signer.tar.gz
         asset_name: mcl_signer_${{ github.event.inputs.version }}_${{ matrix.runs-on }}.tar.gz
+        asset_content_type: application/x-tar
