--- a/.github/workflows/go_mcl_signer.yml
+++ b/.github/workflows/go_mcl_signer.yml
@@ -42,19 +42,19 @@ jobs:
       if: runner.os == 'Linux'
       run: | 
         cd ./cmd/mcl
-        go build -buildmode=c-shared -o ${HOME}/runner/work/mcl.so
+        go build -buildmode=c-shared -o $GITHUB_WORKSPACE/mcl.so
 
     - name: Build on MacOS
       if: runner.os == 'macOS'
       run: | 
         cd ./cmd/mcl
-        go build -buildmode=c-shared -o ${HOME}/runner/work/mcl.dylib
+        go build -buildmode=c-shared -o $GITHUB_WORKSPACE/mcl.dylib
 
     - name: Save artifacts
       uses: actions/upload-artifact@v2
       with:
         name: libraries
         path: |
-          ${HOME}/work/*.so
-          ${HOME}/runner/work/*.dylib
+          ${GITHUB_WORKSPACE}/mcl.so
+          ${GITHUB_WORKSPACE}/mcl.dylib
         if-no-files-found: error
