--- a/.github/workflows/go_mcl_signer.yml
+++ b/.github/workflows/go_mcl_signer.yml
@@ -3,7 +3,7 @@ name: Build MCL signer
 on:
   workflow_dispatch:
     inputs:
-      attach-on-release:
+      attach:
         type: boolean
         description: Attach artifacts on release, if one exists
 
@@ -60,7 +60,7 @@ jobs:
         if-no-files-found: error
 
   attach-on-release:
-    if: ${{ github.event.inputs.attach_on_release == 'true' }}
+    if: ${{ github.event.inputs.attach == 'true' }}
     needs: [build]
     runs-on: ubuntu-latest
     steps:
